--- a/九柒喵全集/menu.html
+++ b/九柒喵全集/menu.html
@@ -9,9 +9,9 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./九柒喵 - 琉璃川椿全图66p 8月8打赏群资源/index.html">九柒喵 - 琉璃川椿全图66p 8月8打赏群资源</a></p> 
-  <p><a href="./九柒喵 - 芙洛伦 药心少女前线/index.html">九柒喵 - 芙洛伦 药心少女前线</a></p> 
-  <p><a href="./九柒喵 - 蔚蓝档案 狐坂若藻 泳装 [23P-156M]/index.html">九柒喵 - 蔚蓝档案 狐坂若藻 泳装 [23P-156M]</a></p> 
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E7%90%89%E7%92%83%E5%B7%9D%E6%A4%BF%E5%85%A8%E5%9B%BE66p-08-19">九柒喵 - 琉璃川椿全图66p</a></p> 
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E8%8A%99%E6%B4%9B%E4%BC%A6-%E8%8D%AF%E5%BF%83-%E5%B0%91%E5%A5%B3%E5%89%8D%E7%BA%BF-08-19">九柒喵 - 芙洛伦 药心少女前线</a></p> 
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E7%8B%90%E5%9D%82%E8%8B%A5%E8%97%BB-%E6%B3%B3%E8%A3%85-23P-156M-08-19">九柒喵 - 蔚蓝档案 狐坂若藻 泳装 [23P-156M]</a></p> 
   <p><a href="./九柒喵 - 酒吞童子原皮全图92p（部分）/index.html">九柒喵 - 酒吞童子原皮全图92p（部分）</a></p> 
 </body>
 </html>
