--- a/凉凉子全集/menu.html
+++ b/凉凉子全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./凉凉子 - 大凤助教 50p1v 8月12打赏群资源  Telegraph/index.html">凉凉子 - 大凤助教 50p1v 8月12打赏群资源  Telegraph</a></p> 
+  <p><a href="https://telegra.ph/test-08-19-326">凉凉子 - 大凤助教 50p1v 8月12打赏群资源  Telegraph</a></p> 
 </body>
 </html>
