--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./桜井宁宁 - 史莱姆 [141P-564M]/index.html">桜井宁宁 - 史莱姆 [141P-564M]</a></p> 
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E5%8F%B2%E8%8E%B1%E5%A7%86-141P-564M-08-19">桜井宁宁 - 史莱姆 [141P-564M]</a></p> 
 </body>
 </html>
