--- a/蜜汁猫裘全集/menu.html
+++ b/蜜汁猫裘全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./蜜汁猫裘 - 酒红圣诞 [61P1V-1G]/index.html">蜜汁猫裘 - 酒红圣诞 [61P1V-1G]</a></p> 
+  <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98---%E9%85%92%E7%BA%A2%E5%9C%A3%E8%AF%9E-61P1V-1G-08-19">蜜汁猫裘 - 酒红圣诞 [61P1V-1G]</a></p> 
 </body>
 </html>
