提交新数据

--- a/Bangni邦尼全集/menu.html
+++ b/Bangni邦尼全集/menu.html
@@ -6,7 +6,10 @@
 <body>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./Bangni邦尼 - 限定女友 [40P11V-383M]/index.html">Bangni邦尼 - 限定女友 [40P11V-383M]</a></p> 
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E9%99%90%E5%AE%9A%E5%A5%B3%E5%8F%8B-40P11V-383M-08-19">Bangni邦尼 - 限定女友 [40P11V-383M]</a></p> 
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---NIKKE%E6%AF%92%E8%9B%87-08-19">Bangni邦尼 - NIKKE毒蛇</a></p> 
+
+
 
 </body>
 </html>
