--- a/云溪溪全集/menu.html
+++ b/云溪溪全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E9%BB%91%E5%85%94%E5%85%94-76P-137M-08-19">奈汐酱nice - 黑兔兔 [76P-137M]</a></p> 
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E6%A1%83-%E9%87%87%E8%8E%B2-08-19">云溪溪 - 奶桃桃 采莲</a></p> 
 </body>
 </html>
