--- a/修修猫ww全集/menu.html
+++ b/修修猫ww全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./修修猫ww - 可爱捣蛋鬼 25p6v 2月10打赏群资源/index.html">修修猫ww - 可爱捣蛋鬼 25p6v 2月10打赏群资源</a></p> 
+  <p><a href="https://telegra.ph/%E4%BF%AE%E4%BF%AE%E7%8C%ABww---%E5%8F%AF%E7%88%B1%E6%8D%A3%E8%9B%8B%E9%AC%BC-25p6v-08-19">修修猫ww - 可爱捣蛋鬼 25p6v</a></p> 
 </body>
 </html>
