--- a/十万珍吱伏特全集/menu.html
+++ b/十万珍吱伏特全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./十万珍吱伏特 - 撸猫日记[102P1V 306M]/index.html">十万珍吱伏特 - 撸猫日记[102P1V 306M]</a></p> 
+  <p><a href="https://telegra.ph/%E5%8D%81%E4%B8%87%E7%8F%8D%E5%90%B1%E4%BC%8F%E7%89%B9---%E6%92%B8%E7%8C%AB%E6%97%A5%E8%AE%B0102P1V-306M-08-19">十万珍吱伏特 - 撸猫日记[102P1V 306M]</a></p> 
 </body>
 </html>
