--- a/您的蛋蛋全集/menu.html
+++ b/您的蛋蛋全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./您的蛋蛋 - 交错战线 粉毛卡提娜 [92P-669M]/index.html">您的蛋蛋 - 交错战线 粉毛卡提娜 [92P-669M]</a></p> 
+  <p><a href="https://telegra.ph/%E6%82%A8%E7%9A%84%E8%9B%8B%E8%9B%8B---%E4%BA%A4%E9%94%99%E6%88%98%E7%BA%BF-%E7%B2%89%E6%AF%9B%E5%8D%A1%E6%8F%90%E5%A8%9C-92P-669M-08-19">您的蛋蛋 - 交错战线 粉毛卡提娜 [92P-669M]</a></p> 
 </body>
 </html>
