--- a/是依酱吖全集/menu.html
+++ b/是依酱吖全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./是依酱吖 - 黑狼 [34P2V-134M]/index.html">是依酱吖 - 黑狼 [34P2V-134M]</a></p> 
+  <p><a href="https://telegra.ph/%E6%98%AF%E4%BE%9D%E9%85%B1%E5%90%96---%E9%BB%91%E7%8B%BC-34P2V-134M-08-19">是依酱吖 - 黑狼 [34P2V-134M]</a></p> 
 </body>
 </html>
