--- a/末夜787全集/menu.html
+++ b/末夜787全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./末夜787 - 女仆自拍 [24P3V-233M]/index.html">末夜787 - 女仆自拍 [24P3V-233M]</a></p> 
+  <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787---%E5%A5%B3%E4%BB%86%E8%87%AA%E6%8B%8D-24P3V-233M-08-19">末夜787 - 女仆自拍 [24P3V-233M]</a></p> 
 </body>
 </html>
