--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -6,7 +6,7 @@
 <body>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./蠢沫沫 - 黑神话 萍萍 [138P-966M]/index.html">蠢沫沫 - 黑神话 萍萍 [138P-966M]</a></p> 
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%91%E7%A5%9E%E8%AF%9D-%E8%90%8D%E8%90%8D-138P-966M-08-19">蠢沫沫 - 黑神话 萍萍 [138P-966M]</a></p> 
 
 </body>
 </html>
