--- a/过期米线线喵全集/menu.html
+++ b/过期米线线喵全集/menu.html
@@ -6,7 +6,7 @@
 <body>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./过期米线线喵 - 异世界玩偶 [56P-796M]/index.html">过期米线线喵 - 异世界玩偶 [56P-796M]</a></p> 
+  <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5---%E5%BC%82%E4%B8%96%E7%95%8C%E7%8E%A9%E5%81%B6-56P-796M-08-19">过期米线线喵 - 异世界玩偶 [56P-796M]</a></p> 
 
 </body>
 </html>
