--- a/雪晴Astra全集/menu.html
+++ b/雪晴Astra全集/menu.html
@@ -9,7 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./雪晴Astra - 牛仔短裤 [119P7V-1G]/index.html">雪晴Astra - 牛仔短裤 [119P7V-1G]</a></p> 
-  <p><a href="./雪晴Astra - 金发兔女郎 [73P1V-147G]/index.html">雪晴Astra - 金发兔女郎 [73P1V-147G]</a></p> 
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E7%89%9B%E4%BB%94%E7%9F%AD%E8%A3%A4-119P7V-1G-08-19">雪晴Astra - 牛仔短裤 [119P7V-1G]</a></p> 
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E9%87%91%E5%8F%91%E5%85%94%E5%A5%B3%E9%83%8E-73P1V-147G-08-19">雪晴Astra - 金发兔女郎 [73P1V-147G]</a></p> 
 </body>
 </html>
