--- a/鬼畜瑶在不在w全集/menu.html
+++ b/鬼畜瑶在不在w全集/menu.html
@@ -6,8 +6,8 @@
 <body>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./鬼畜瑶在不在w - 女仆奶牛 [30P1V-306M]/index.html">鬼畜瑶在不在w - 女仆奶牛 [30P1V-306M]</a></p> 
-  <p><a href="./鬼畜瑶在不在w - 豹纹 [50P3V-460M]/index.html">鬼畜瑶在不在w - 豹纹 [50P3V-460M]</a></p> 
+  <p><a href="https://telegra.ph/%E9%AC%BC%E7%95%9C%E7%91%B6%E5%9C%A8%E4%B8%8D%E5%9C%A8w---%E5%A5%B6%E7%89%9B-30P1V-306M-08-19">鬼畜瑶在不在w - 女仆奶牛 [30P1V-306M]</a></p> 
+  <p><a href="https://telegra.ph/%E9%AC%BC%E7%95%9C%E7%91%B6%E5%9C%A8%E4%B8%8D%E5%9C%A8w---%E8%B1%B9%E7%BA%B9-50P3V-460M-08-19">鬼畜瑶在不在w - 豹纹 [50P3V-460M]</a></p> 
 
 </body>
 </html>
