--- a/星黛鹿鹿(千反田鹿子)全集/menu.html
+++ b/星黛鹿鹿(千反田鹿子)全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./星黛鹿鹿(千反田鹿子) - 祈福巫女 [56P-724M]/index.html">星黛鹿鹿(千反田鹿子) - 祈福巫女 [56P-724M]</a></p> 
+  <p><a href="https://telegra.ph/%E6%98%9F%E9%BB%9B%E9%B9%BF%E9%B9%BF%E5%8D%83%E5%8F%8D%E7%94%B0%E9%B9%BF%E5%AD%90---%E7%A5%88%E7%A6%8F%E5%B7%AB%E5%A5%B3-56P-724M-08-19">星黛鹿鹿(千反田鹿子) - 祈福巫女 [56P-724M]</a></p> 
 </body>
 </html>
