--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <p><a href="./修修猫ww全集/menu.html">修修猫ww全集</a></p> 
   <p><a href="./凉凉子全集/menu.html">凉凉子全集</a></p> 
   <p><a href="./十万珍吱伏特全集/menu.html">十万珍吱伏特全集</a></p> 
+  <p><a href="./咬一口兔娘/menu.html">咬一口兔娘</a></p> 
   <p><a href="./奈汐酱nice全集/menu.html">奈汐酱nice全集</a></p> 
   <p><a href="./小羊不吃草全集/menu.html">小羊不吃草全集</a></p> 
   <p><a href="./布丁全集/menu.html">布丁全集</a></p> 
