新增福利姬

--- a/Bangni邦尼全集/menu.html
+++ b/Bangni邦尼全集/menu.html
@@ -8,8 +8,10 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E9%99%90%E5%AE%9A%E5%A5%B3%E5%8F%8B-40P11V-383M-08-19">Bangni邦尼 - 限定女友 [40P11V-383M]</a></p> 
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---NIKKE%E6%AF%92%E8%9B%87-08-19">Bangni邦尼 - NIKKE毒蛇</a></p> 
-
-
-
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E9%AD%94%E6%B3%95%E5%B9%BB%E5%A2%83-88P-1G-08-19">Bangni邦尼 - 魔法幻境 [88P-1G]</a></p> 
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E6%B3%B3%E8%A3%85%E6%9F%B4%E9%83%A1-86P-832M-08-19">Bangni邦尼 - 泳装柴郡 [86P-832M]</a></p> 
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%B0%BC%E5%B0%94-%E6%9C%BA%E6%A2%B0%E7%BA%AA%E5%85%83-2B-%E5%9C%A3%E8%AF%9E105P-962M-08-19">Bangni邦尼 - 尼尔 机械纪元 2B 圣诞[105P-962M]</a></p> 
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%9C%A3%E8%AF%9E%E5%B0%BC%E5%B0%94-%E7%BA%A2%E8%A3%99%E5%BE%A1%E5%A7%90-132P3V-966M-08-19">Bangni邦尼 - 圣诞尼尔 红裙御姐 [132P3V-966M]</a></p> 
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E4%BD%93%E6%93%8D%E5%90%8E-82P12V-950M-08-19">Bangni邦尼 - 体操后 [82P12V-950M]</a></p> 
 </body>
 </html>
