--- a/PoppaChan/menu.html
+++ b/PoppaChan/menu.html
@@ -10,5 +10,11 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/PoppaChan-%E9%B8%A3%E6%BD%AE%E5%8D%A1%E6%8F%90%E8%A5%BF%E4%BA%9A%E8%8A%99%E9%9C%B2%E5%BE%B7%E8%8E%89%E6%96%AF%E5%8F%8C%E4%BA%BA-08-19">PoppaChan 鸣潮卡提西亚芙露德莉斯双人</a></p> 
+  <p><a href="https://telegra.ph/PoppaChan---Rupee-08-19">PoppaChan - Rupee</a></p> 
+  <p><a href="https://telegra.ph/Poppachan---%E8%8A%B1%E7%81%AB-Sparkle-08-19">Poppachan - 花火 Sparkle</a></p> 
+  <p><a href="https://telegra.ph/Poppachan---The-Herta-08-19">Poppachan - The Herta</a></p> 
+  <p><a href="https://telegra.ph/Poppachan---Rukkhadevata-08-19">Poppachan - Rukkhadevata</a></p> 
+  <p><a href="https://telegra.ph/Poppachan---Marine-HoushouDance-ver-08-19">Poppachan - Marine Houshou[Dance ver]</a></p> 
+  <p><a href="https://telegra.ph/PoppaChan---Jane-Doe-08-19">PoppaChan - Jane Doe</a></p> 
 </body>
 </html>
