--- a/奈汐酱nice全集/menu.html
+++ b/奈汐酱nice全集/menu.html
@@ -10,5 +10,11 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E9%BB%91%E5%85%94%E5%85%94-76P-137M-08-19">奈汐酱nice - 黑兔兔 [76P-137M]</a></p> 
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E4%B8%8B%E5%8D%88%E8%8C%B6-73P-778M-08-19">奈汐酱nice - 下午茶 [73P-778M]</a></p> 
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E6%8E%A2%E6%98%A5-79P-715M-08-19">奈汐酱nice - 探春 [79P-715M]</a></p> 
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E6%A5%BC%E6%A2%AF%E5%B0%8F%E8%A1%A3-56P-429M-08-19">奈汐酱nice - 楼梯小衣 [56P-429M]</a></p> 
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA-%E5%A5%B6%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1-%E5%90%8E%E8%B0%83-85P1V-1G-08-19">云溪溪 奶桃&奈汐酱 后调 [85P1V-1G]</a></p> 
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E7%99%BD%E6%97%A5%E6%A2%A6-90P1V-936M-08-19">奈汐酱nice - 白日梦 [90P1V-936M]</a></p> 
+
 </body>
 </html>
