--- a/蜜汁猫裘全集/menu.html
+++ b/蜜汁猫裘全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98---%E9%85%92%E7%BA%A2%E5%9C%A3%E8%AF%9E-61P1V-1G-08-19">蜜汁猫裘 - 酒红圣诞 [61P1V-1G]</a></p> 
+  <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98---%E9%B8%A3%E6%BD%AE-%E5%9D%8E%E7%89%B9%E8%95%BE%E6%8B%89-08-19">蜜汁猫裘 - 鸣潮 坎特蕾拉</a></p> 
 </body>
 </html>
