--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -7,6 +7,11 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%91%E7%A5%9E%E8%AF%9D-%E8%90%8D%E8%90%8D-138P-966M-08-19">蠢沫沫 - 黑神话 萍萍 [138P-966M]</a></p> 
-
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E7%A7%8B%E5%AF%BB-%E4%B8%8A-276P-18G-08-19">蠢沫沫 - 秋寻 上 [276P-1.8G]</a></p> 
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E7%A7%8B%E5%AF%BB-%E4%B8%8B-279P-2G-08-19">蠢沫沫 - 秋寻 下 [279P-2G]</a></p> 
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---Nikkei-156P-128G-08-19">蠢沫沫 - Nikkei [156P-1.28G]</a></p> 
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E6%8E%A8%E5%8D%9A%E4%B8%BB%E7%9A%84%E7%A7%98%E5%AF%86-286p1v-08-19">蠢沫沫 - 黄推博主的秘密 286p1v-1</a></p> 
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E6%8E%A8%E5%8D%9A%E4%B8%BB%E7%9A%84%E7%A7%98%E5%AF%86-286p1v7%E6%9C%887%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-19">蠢沫沫 - 黄推博主的秘密 286p1v-2</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E6%8E%A8%E5%8D%9A%E4%B8%BB%E7%9A%84%E7%A7%98%E5%AF%86-286p1v-3-08-19">蠢沫沫 - 黄推博主的秘密 286p1v-3</a></p>
 </body>
 </html>
