--- a/凉凉子全集/menu.html
+++ b/凉凉子全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/test-08-19-326">凉凉子 - 大凤助教 50p1v 8月12打赏群资源  Telegraph</a></p> 
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E7%97%B4%E5%A5%B3%E8%8E%AB%E5%8A%A0%E5%A4%9A%E5%B0%94-08-19">凉凉子 - 痴女莫加多尔</a></p> 
 </body>
 </html>
