--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -10,5 +10,8 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E5%8F%B2%E8%8E%B1%E5%A7%86-141P-564M-08-19">桜井宁宁 - 史莱姆 [141P-564M]</a></p> 
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E9%BB%91%E8%89%B2%E5%A5%B3%E4%BB%86-69P1V105GB-08-19">桜井宁宁 黑色女仆 69P1V1.05GB</a></p> 
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---25%E5%B9%B44%E6%9C%88%E4%BC%9A%E5%91%98%E8%AE%A2%E9%98%85-08-19">桜井宁宁 - 25年4月会员订阅</a></p> 
+
 </body>
 </html>
