--- a/Bangni邦尼全集/menu.html
+++ b/Bangni邦尼全集/menu.html
@@ -13,5 +13,7 @@
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%B0%BC%E5%B0%94-%E6%9C%BA%E6%A2%B0%E7%BA%AA%E5%85%83-2B-%E5%9C%A3%E8%AF%9E105P-962M-08-19">Bangni邦尼 - 尼尔 机械纪元 2B 圣诞[105P-962M]</a></p> 
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%9C%A3%E8%AF%9E%E5%B0%BC%E5%B0%94-%E7%BA%A2%E8%A3%99%E5%BE%A1%E5%A7%90-132P3V-966M-08-19">Bangni邦尼 - 圣诞尼尔 红裙御姐 [132P3V-966M]</a></p> 
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E4%BD%93%E6%93%8D%E5%90%8E-82P12V-950M-08-19">Bangni邦尼 - 体操后 [82P12V-950M]</a></p> 
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%B0%8F%E8%81%8C%E5%91%98-81P-392MB-08-19">Bangni邦尼 - 小职员 [81P-392MB]</a></p> 
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E8%87%B4%E5%91%BD%E6%8B%B3%E5%87%BB-08-19">Bangni邦尼 - 致命拳击</a></p> 
 </body>
 </html>
