--- a/奈汐酱nice全集/menu.html
+++ b/奈汐酱nice全集/menu.html
@@ -15,6 +15,9 @@
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E6%A5%BC%E6%A2%AF%E5%B0%8F%E8%A1%A3-56P-429M-08-19">奈汐酱nice - 楼梯小衣 [56P-429M]</a></p> 
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA-%E5%A5%B6%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1-%E5%90%8E%E8%B0%83-85P1V-1G-08-19">云溪溪 奶桃&奈汐酱 后调 [85P1V-1G]</a></p> 
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E7%99%BD%E6%97%A5%E6%A2%A6-90P1V-936M-08-19">奈汐酱nice - 白日梦 [90P1V-936M]</a></p> 
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E8%B4%B4%E7%94%BB%E4%B9%90%E5%9B%AD-08-19">奈汐酱nice - 贴画乐园</a></p> 
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1---%E8%B1%B9%E7%BA%B9%E4%B8%BB%E5%A6%87-08-19">奈汐酱 - 豹纹主妇</a></p> 
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice-%E7%BB%80%E7%BA%A2-96P1V-151G-08-19">云溪溪 - 奶桃桃&奈汐酱nice 绀红 [96P1V-1.51G]</a></p> 
 
 </body>
 </html>
