--- a/疯猫ss全集/menu.html
+++ b/疯猫ss全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss---%E7%94%9F%E6%97%A5%E6%9C%AC-%E8%8A%B1%E5%AB%81-51P-373M-08-19">疯猫ss - 生日本 花嫁 [51P-373M]</a></p> 
+  <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss---%E4%BA%B2%E7%88%B1%E7%9A%84520-%E8%B0%83%E6%83%85%E6%81%B6%E9%AD%94-72P-466M-08-19">疯猫ss - 亲爱的520 调情恶魔 [72P-466M]</a></p> 
 </body>
 </html>
