--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -13,5 +13,6 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E6%8E%A8%E5%8D%9A%E4%B8%BB%E7%9A%84%E7%A7%98%E5%AF%86-286p1v-08-19">蠢沫沫 - 黄推博主的秘密 286p1v-1</a></p> 
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E6%8E%A8%E5%8D%9A%E4%B8%BB%E7%9A%84%E7%A7%98%E5%AF%86-286p1v7%E6%9C%887%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-19">蠢沫沫 - 黄推博主的秘密 286p1v-2</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E6%8E%A8%E5%8D%9A%E4%B8%BB%E7%9A%84%E7%A7%98%E5%AF%86-286p1v-3-08-19">蠢沫沫 - 黄推博主的秘密 286p1v-3</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E5%A4%9C%E8%A1%8C-57P-688M-08-19">蠢沫沫 - 夜行 [57P-688M]</a></p> 
 </body>
 </html>
