--- a/起司块wii全集/menu.html
+++ b/起司块wii全集/menu.html
@@ -11,5 +11,6 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E8%B5%B7%E5%8F%B8%E5%9D%97wii---%E5%A4%9C%E5%85%B0%E8%87%AA%E6%8B%8D-08-19">起司块wii - 夜兰自拍</a></p> 
   <p><a href="https://telegra.ph/%E8%B5%B7%E5%8F%B8%E5%9D%97---%E9%BB%91%E8%89%B2%E6%8A%A4%E5%A3%AB-58P-515MB-08-19">起司块 - 黑色护士 [58P-515MB]</a></p> 
+  <p><a href="http://telegra.ph/%E8%B5%B7%E5%8F%B8%E5%9D%97wii---%E7%94%98%E5%8F%A4%E7%89%B9-51P5V-415M-08-19">起司块wii - 甘古特 [51P5V-415M]</a></p> 
 </body>
 </html>
