--- a/雪晴Astra全集/menu.html
+++ b/雪晴Astra全集/menu.html
@@ -11,5 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E7%89%9B%E4%BB%94%E7%9F%AD%E8%A3%A4-119P7V-1G-08-19">雪晴Astra - 牛仔短裤 [119P7V-1G]</a></p> 
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E9%87%91%E5%8F%91%E5%85%94%E5%A5%B3%E9%83%8E-73P1V-147G-08-19">雪晴Astra - 金发兔女郎 [73P1V-147G]</a></p> 
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E8%82%89%E4%B8%9D%E9%80%9A%E5%8B%A4OL-71P1V-136G-08-19">雪晴Astra - 肉丝通勤OL [71P1V-1.36G]</a></p> 
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E8%82%89%E4%B8%9D-%E6%B4%97%E6%B5%B4%E5%BA%97-86P1V-148G-08-19">雪晴Astra - 肉丝 洗浴店 [86P1V-1.48G]</a></p> 
 </body>
 </html>
