--- a/古阿扎全集/menu.html
+++ b/古阿扎全集/menu.html
@@ -10,5 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%8F%A4%E9%98%BF%E6%89%8E---%E6%B3%89%E4%B9%8B%E9%BE%99%E7%B2%BE%E7%81%B5-08-19">古阿扎 - 泉之龙精灵</a></p> 
+  <p><a href="https://telegra.ph/%E5%8F%A4%E9%98%BF%E6%89%8E---%E8%8F%B2%E4%BC%A6-105P-713M-08-19">古阿扎 - 菲伦 [105P-713M]</a></p> 
+
 </body>
 </html>
