--- a/蜜汁猫裘全集/menu.html
+++ b/蜜汁猫裘全集/menu.html
@@ -11,5 +11,10 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98---%E9%85%92%E7%BA%A2%E5%9C%A3%E8%AF%9E-61P1V-1G-08-19">蜜汁猫裘 - 酒红圣诞 [61P1V-1G]</a></p> 
   <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98---%E9%B8%A3%E6%BD%AE-%E5%9D%8E%E7%89%B9%E8%95%BE%E6%8B%89-08-19">蜜汁猫裘 - 鸣潮 坎特蕾拉</a></p> 
+  <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98---%E8%A7%A6%E6%89%8B%E9%AD%85%E9%AD%94-85p2v-08-19">蜜汁猫裘 - 触手魅魔 85p2v</a></p>
+  <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98---%E7%94%98%E9%9B%A8%E5%83%B5%E5%B0%B8-41p1v-08-19">蜜汁猫裘 - 甘雨僵尸 41p1v</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E5%A4%9C%E9%AD%85%E4%B8%9D%E5%BD%B1-90P1V-18G-08-19">桜井宁宁 - 夜魅丝影 [90P1V-1.8G]</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E9%BB%91%E4%B8%9D%E5%A5%B3%E4%BB%86-08-19">桜井宁宁 - 黑丝女仆</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---JK%E7%8C%AB%E8%80%B3-08-19">桜井宁宁 - JK猫耳</a></p>
 </body>
 </html>
