--- a/阿半今天很开心全集/menu.html
+++ b/阿半今天很开心全集/menu.html
@@ -9,7 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./清水由乃 - 醉94P+视频（部分）/index.html">清水由乃 - 醉94P+视频（部分）</a></p> 
-  <p><a href="https://telegra.ph/%E6%B8%85%E6%B0%B4%E7%94%B1%E4%B9%83---%E7%B4%AB-64P1V-336M-08-19">清水由乃 - 紫 [64P1V-336M]</a></p>
+  <p><a href="https://telegra.ph/%E9%98%BF%E5%8D%8A%E4%BB%8A%E5%A4%A9%E5%BE%88%E5%BC%80%E5%BF%83---%E7%B2%89%E8%89%B2%E5%8F%8C%E9%A9%AC%E5%B0%BE-08-19">阿半今天很开心 - 粉色双马尾</a></p> 
 </body>
 </html>
