--- a/一只毛毛帽全集/menu.html
+++ b/一只毛毛帽全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E6%AF%9B%E6%AF%9B%E5%B8%BD---%E5%A6%88%E5%92%AA%E7%9A%84%E8%B0%83%E6%95%99-08-19">一只毛毛帽 - 妈咪的调教</a></p> 
+  <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E6%AF%9B%E6%AF%9B%E5%B8%BD--%E9%93%B6%E8%89%B2%E7%8F%8D%E7%8F%A0-176P-331GB-08-19">一只毛毛帽 – 银色珍珠 [176P-3.31GB]</a></p>
 </body>
 </html>
