--- a/安食Ajiki全集/menu.html
+++ b/安食Ajiki全集/menu.html
@@ -9,7 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./清水由乃 - 醉94P+视频（部分）/index.html">清水由乃 - 醉94P+视频（部分）</a></p> 
-  <p><a href="https://telegra.ph/%E6%B8%85%E6%B0%B4%E7%94%B1%E4%B9%83---%E7%B4%AB-64P1V-336M-08-19">清水由乃 - 紫 [64P1V-336M]</a></p>
+  <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%A4%A7%E5%87%A4JK-08-19">安食Ajiki - 碧蓝航线 大凤JK</a></p> 
 </body>
 </html>
