--- a/布丁全集/menu.html
+++ b/布丁全集/menu.html
@@ -7,6 +7,9 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="./布丁 - 花嫁之约 66p5v （部分）/index.html">布丁 - 花嫁之约 66p5v （部分）</a></p> 
-
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub-3%E6%9C%88%E8%AE%A2%E9%98%85-08-19">布丁 - Perohub 3月订阅</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub-3%E6%9C%88%E8%AE%A2%E9%98%85-2-08-19">布丁 - Perohub 3月订阅 2</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub-4%E6%9C%88%E8%AE%A2%E9%98%85-08-19">布丁 - Perohub 4月订阅</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub-4%E6%9C%88%E8%AE%A2%E9%98%85-08-19-2">布丁 - Perohub 4月订阅-2</a></p>
 </body>
 </html>
