--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -10,5 +10,9 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---Fleurdelys-75P-128M-08-19">水淼aqua - Fleurdelys [75P-128M]</a></p> 
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-%E9%81%90%E8%9D%B6%E5%B4%A9%E5%9D%8F%E6%98%9F%E7%A9%B9%E9%93%81%E9%81%93-08-19">水淼 遐蝶（崩坏：星穹铁道）</a></p> 
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---%E5%A8%9C%E7%BB%B4%E5%A8%85-08-19">水淼aqua - 娜维娅</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---%E9%B8%A3%E6%BD%AE%E8%B5%9E%E5%A6%AE-08-19">水淼aqua - 鸣潮赞妮</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua-%E3%82%B6%E3%83%B3%E3%83%8B%E3%83%BC-%E6%9C%89%E6%96%9930%E6%9E%9A-%E7%84%A1%E6%96%99%E5%88%86%E3%82%92%E5%90%AB%E3%82%80-08-19">水淼aqua ザンニー🖤_🖤有料30枚（ 無料分を含む ）🖤</a></p>
 </body>
 </html>
