--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -14,5 +14,9 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E6%8E%A8%E5%8D%9A%E4%B8%BB%E7%9A%84%E7%A7%98%E5%AF%86-286p1v7%E6%9C%887%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-19">蠢沫沫 - 黄推博主的秘密 286p1v-2</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E6%8E%A8%E5%8D%9A%E4%B8%BB%E7%9A%84%E7%A7%98%E5%AF%86-286p1v-3-08-19">蠢沫沫 - 黄推博主的秘密 286p1v-3</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E5%A4%9C%E8%A1%8C-57P-688M-08-19">蠢沫沫 - 夜行 [57P-688M]</a></p> 
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E8%B1%86%E7%B2%8920-171p50p%E8%8A%B1%E7%B5%AE-1-08-19">蠢沫沫 - 黄豆粉2.0 171p50p花絮 1</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E8%B1%86%E7%B2%8920-171p50p%E8%8A%B1%E7%B5%AE-2-08-19">蠢沫沫 - 黄豆粉2.0 171p50p花絮 2</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E8%B1%86%E7%B2%8920-171p50p%E8%8A%B1%E7%B5%AE-3-08-19">蠢沫沫 - 黄豆粉2.0 171p50p花絮 3</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E5%B0%BE%E5%BC%A0-08-19">蠢沫沫 - 尾张</a></p>
 </body>
 </html>
