--- a/Bangni邦尼全集/menu.html
+++ b/Bangni邦尼全集/menu.html
@@ -15,5 +15,7 @@
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E4%BD%93%E6%93%8D%E5%90%8E-82P12V-950M-08-19">Bangni邦尼 - 体操后 [82P12V-950M]</a></p> 
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%B0%8F%E8%81%8C%E5%91%98-81P-392MB-08-19">Bangni邦尼 - 小职员 [81P-392MB]</a></p> 
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E8%87%B4%E5%91%BD%E6%8B%B3%E5%87%BB-08-19">Bangni邦尼 - 致命拳击</a></p> 
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%9B%9A%E7%A6%81%E9%AD%85%E9%AD%94-08-19">Bangni邦尼 - 囚禁魅魔</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E9%9D%A2%E8%AF%9585P16V-109G-08-19">Bangni邦尼 - 面试[85P+16V-1.09G]</a></p>
 </body>
 </html>
