--- a/Quan冉有点饿全集/menu.html
+++ b/Quan冉有点饿全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E6%A9%98%E5%85%89-32p-08-19">Quan冉有点饿 - 橘光 32p</a></p> 
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-08-19">Quan冉有点饿 - 飞鸟马时</a></p>
 </body>
 </html>
