--- a/九曲jean全集/menu.html
+++ b/九曲jean全集/menu.html
@@ -10,5 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2jean---%E5%93%A5%E5%B8%83%E6%9E%97%E6%9D%80%E6%89%8B-%E5%89%91%E4%B9%8B%E5%9C%A3%E5%A5%B3-40P-163M-08-19">九曲jean - 哥布林杀手 剑之圣女 [40P-163M]</a></p> 
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%9F%B4%E9%83%A1%E7%BB%9A%E7%83%82%E5%A4%9C%E6%A2%A6-40P-431MB-08-19">九曲Jean - 碧蓝航线 柴郡·绚烂夜梦 [40P-431MB]</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF%E8%8B%B1%E4%BB%99%E5%BA%A7%E6%8A%A4%E5%A3%AB-08-19">九曲Jean 碧蓝航线英仙座护士</a></p>
 </body>
 </html>
