--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -14,6 +14,9 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---25%E5%B9%B44%E6%9C%88%E4%BC%9A%E5%91%98%E8%AE%A2%E9%98%85-08-19">桜井宁宁 - 25年4月会员订阅</a></p> 
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E5%92%8C%E8%A2%96%E6%9B%B3%E5%B0%BE107P1V209GB-08-19">桜井宁宁 - 和袖曳尾(107P1V2.09GB)</a></p> 
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E7%B2%89%E7%B2%89%E5%A4%A7%E7%99%BD%E5%85%94-08-19">桜井宁宁 - 粉粉大白兔</a></p> 
-
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---Partme-25%E5%B9%B42%E6%9C%88%E8%AE%A2%E9%98%85-08-19">桜井宁宁 - Partme 25年2月订阅</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---25%E5%B9%B403%E6%9C%88%E4%BC%9A%E5%91%98%E8%AE%A2%E9%98%85-86P4V-872M-08-19">桜井宁宁 - 25年03月</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---25%E5%B9%B403%E6%9C%88%E4%BC%9A%E5%91%98%E8%AE%A2%E9%98%85-86P4V-872M-08-19-2">桜井宁宁 - 25年03月会员订阅 [86P4V-872M]</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---JK%E7%8C%AB%E8%80%B3-08-19">桜井宁宁 - JK猫耳</a></p>
 </body>
 </html>
