--- a/清水由乃全集/menu.html
+++ b/清水由乃全集/menu.html
@@ -9,7 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./清水由乃 - 醉94P+视频（部分）/index.html">清水由乃 - 醉94P+视频（部分）</a></p> 
   <p><a href="https://telegra.ph/%E6%B8%85%E6%B0%B4%E7%94%B1%E4%B9%83---%E7%B4%AB-64P1V-336M-08-19">清水由乃 - 紫 [64P1V-336M]</a></p>
+  <p><a href="https://telegra.ph/%E6%B8%85%E6%B0%B4%E7%94%B1%E4%B9%83-%E5%8F%AF%E7%88%B1%E7%86%8A50P-08-19">清水由乃 可爱熊50P</a></p>
 </body>
 </html>
