--- a/矢量鱼全集/menu.html
+++ b/矢量鱼全集/menu.html
@@ -11,5 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E9%9B%85%E5%8A%AA%E6%96%AF%E6%B0%B4%E6%89%8B%E6%9C%8D-08-19">矢量鱼 - 雅努斯水手服</a></p> 
   <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-19P-207M-07-19">矢量鱼 - 蔚蓝档案 飞鸟马时 [19P-207M]</a></p> 
+  <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC-%E5%B0%91%E5%A5%B3%E5%89%8D%E7%BA%BF%E4%BA%91%E5%9B%BE%E8%AE%A1%E5%88%92%E8%8A%99%E6%B4%9B%E4%BC%A6-08-19">矢量鱼 少女前线云图计划—芙洛伦</a></p>
+  <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E5%9C%A3%E5%9B%AD%E6%9C%AA%E8%8A%B1-08-19">矢量鱼 - 蔚蓝档案 圣园未花</a></p>
 </body>
 </html>
