--- a/KANEKO_咔喵全集/menu.html
+++ b/KANEKO_咔喵全集/menu.html
@@ -11,5 +11,6 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5---%E9%BB%91%E8%89%B2%E7%88%B1%E5%BF%83%E6%AF%94%E5%9F%BA%E5%B0%BC-52P1V-183G-08-19">KANEKO_咔喵 - 黑色爱心比基尼 [52P1V-1.83G]</a></p> 
   <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E4%BF%A1%E6%B5%93-%E6%B3%B3%E8%A3%85%E6%B0%B4%E7%9D%80-08-19">KANEKO_咔喵 - 碧蓝航线 信浓 泳装水着</a></p>
+  <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5---%E7%8B%90%E7%8B%B8%E5%B7%AB%E5%A5%B3-41P2V-124G-08-19">KANEKO_咔喵 - 狐狸巫女 [41P2V-1.24G]</a></p>
 </body>
 </html>
