--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -11,5 +11,6 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%81%9C%E4%BA%91-112P-835M-08-19">Natsuko夏夏子 - 停云 [112P-835M]</a></p> 
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%BB%BA%E6%AD%A6-90P-186M-08-19">Natsuko夏夏子 - 建武 [90P-186M]</a></p> 
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%BA%A6%E5%B0%94-Yor-08-19">Natsuko夏夏子 - 约尔 Yor</a></p>
 </body>
 </html>
