--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -12,5 +12,6 @@
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E6%9C%89%E6%B0%A7%E6%97%A5-08-19">yuuhui玉汇 - 有氧日</a></p> 
   <p><a href="http://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---6%E6%9C%88%E4%BB%A3%E5%8F%B7-%E8%B2%93-08-19">yuuhui玉汇 - 6月代号 貓</a></p> 
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E6%98%A5%E4%B9%8B%E6%AD%8C-08-19">yuuhui玉汇 - 春之歌</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---2025%E5%B9%B45%E6%9C%88Patreon%E5%A5%96%E5%8A%B1---%E5%A4%AA%E5%A4%AA%E7%9A%84%E6%98%A5%E6%B8%B8%E8%AE%A1%E5%88%92-131P2V125G-08-19">玉汇 - 2025年5月Patreon奖励 - 太太的春游计划 131P2V1.25G</a></p>
 </body>
 </html>
