--- a/上杉绘梨落全集/menu.html
+++ b/上杉绘梨落全集/menu.html
@@ -11,5 +11,6 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%B8%8A%E6%9D%89%E7%BB%98%E6%A2%A8%E8%90%BD---%E5%9C%B0%E9%9B%B7%E7%B3%BB%E7%B2%BE%E7%81%B5%E9%9C%B2%E5%A8%9C-08-19">上杉绘梨落 - 地雷系精灵露娜</a></p> 
   <p><a href="https://telegra.ph/%E4%B8%8A%E6%9D%89%E7%BB%98%E6%A2%A8%E8%90%BD---%E4%B8%80%E4%B9%8B%E6%BF%91%E6%98%8E%E6%97%A5%E5%A5%88-08-19">上杉绘梨落 - 一之濑明日奈</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%8A%E6%9D%89%E7%BB%98%E6%A2%A8%E8%90%BD---%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9B%E5%90%8C%E4%BA%BA-08-19">上杉绘梨落 - 雷电将军同人</a></p>
 </body>
 </html>
