--- a/九柒喵全集/menu.html
+++ b/九柒喵全集/menu.html
@@ -14,6 +14,9 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E7%8B%90%E5%9D%82%E8%8B%A5%E8%97%BB-%E6%B3%B3%E8%A3%85-23P-156M-08-19">九柒喵 - 蔚蓝档案 狐坂若藻 泳装 [23P-156M]</a></p> 
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E6%9C%9D%E5%87%AA-%E5%8E%9F%E7%9A%AE-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-40P-238M-08-19">九柒喵 - 朝凪 原皮 碧蓝航线 [40P-238M]</a></p> 
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E6%9C%9D%E5%87%AAJK-08-19">九柒喵 - 朝凪JK</a></p> 
-  <p><a href="./九柒喵 - 酒吞童子原皮全图92p（部分）/index.html">九柒喵 - 酒吞童子原皮全图92p（部分）</a></p> 
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E9%9C%9E%E6%B3%BD%E7%BE%8E%E6%B8%B855p-08-19">九柒喵 - 霞泽美游55p</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E7%BF%A0%E9%9B%80%E5%AA%9A36p-3%E6%9C%8810%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-19">九柒喵 - 翠雀媚36p</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E5%88%9D%E9%9F%B3%E5%85%94%E5%AD%90%E6%B4%9E-26p-08-19">九柒喵 - 初音兔子洞 26p</a></p>
+
 </body>
 </html>
