--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -11,5 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---25%E5%B9%B46%E6%9C%88-%E6%8A%96%E9%9F%B3%E4%BC%9A%E5%91%98-43P7V-347M-08-19">九言 - 25年6月 抖音会员 [43P7V-347M]</a></p> 
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%B0%8F%E6%81%B6%E9%AD%94-66P8V-18G-08-19">九言 - 小恶魔 [66P8V-1.8G]</a></p> 
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%88%98%E6%9C%AF%E5%A8%98-68P3V-511M-08-19">九言 - 战术娘 [68P3V-511M]</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---NIKKE%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-%E7%B4%A2%E8%BE%BE-82P5V-513M-08-19">九言 - NIKKE胜利女神 索达 [82P5V-513M]</a></p>
 </body>
 </html>
