--- a/喜欢爱理吗全集/menu.html
+++ b/喜欢爱理吗全集/menu.html
@@ -13,5 +13,6 @@
   <p><a href="https://telegra.ph/%E5%96%9C%E6%AC%A2%E7%88%B1%E7%90%86%E5%90%97---%E6%97%A9%E6%BF%91%E4%BC%98%E9%A6%99-49p-08-19">喜欢爱理吗 - 早濑优香 49p</a></p> 
   <p><a href="https://telegra.ph/%E5%96%9C%E6%AC%A2%E7%88%B1%E7%90%86%E5%90%97---%E6%9F%B4%E9%83%A1%E6%97%97%E8%A2%8D-36p-08-19">喜欢爱理吗 - 柴郡旗袍 36p</a></p> 
   <p><a href="https://telegra.ph/%E5%96%9C%E6%AC%A2%E7%88%B1%E7%90%86%E5%90%97---%E8%97%BF%E8%97%BF-69P-783M-08-19">喜欢爱理吗 - 藿藿 [69P-783M]</a></p> 
+  <p><a href="https://telegra.ph/%E5%96%9C%E6%AC%A2%E7%88%B1%E7%90%86%E5%90%97---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%81%B6%E6%AF%92-%E7%99%BD%E5%85%94-08-19">喜欢爱理吗 - 碧蓝航线 恶毒 白兔</a></p>
 </body>
 </html>
