--- a/抱走莫子全集/menu.html
+++ b/抱走莫子全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90---%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-08-19">抱走莫子 - 飞鸟马时</a></p> 
+  <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90-%E7%90%B3%E5%A6%AE%E7%89%B9%E9%AD%94%E6%9C%AF%E5%B8%88-08-19">抱走莫子 琳妮特魔术师</a></p>
 </body>
 </html>
