--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -18,5 +18,7 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E8%B1%86%E7%B2%8920-171p50p%E8%8A%B1%E7%B5%AE-2-08-19">蠢沫沫 - 黄豆粉2.0 171p50p花絮 2</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%84%E8%B1%86%E7%B2%8920-171p50p%E8%8A%B1%E7%B5%AE-3-08-19">蠢沫沫 - 黄豆粉2.0 171p50p花絮 3</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E5%B0%BE%E5%BC%A0-08-19">蠢沫沫 - 尾张</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%87%91%E5%8F%91%E8%9D%B4%E8%9D%B6%E7%BB%93-94P-101GB-08-19">蠢沫沫 - 金发蝴蝶结 [94P-1.01GB]</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E6%9E%AF%E5%8F%B6%E8%9D%B6-08-19">蠢沫沫 - 枯叶蝶</a></p>
 </body>
 </html>
